<resources>
    <string name="app_name">Commerce</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_empty"></string>
    <string name="menu_text_employee">Empleados</string>
    <string name="menu_text_task">Tareas</string>
    <string name="menu_text_setting">Ajustes</string>
    <string name="text_state">Estado:</string>
    <string name="text_title_page_setting">Ajustes</string>
    <string name="text_download">Descargar información</string>
    <string name="text_type_employee">Gestionar los tipos de empleados</string>
    <string name="text_type_task">Gestionar los tipos de tareas</string>
    <string name="text_type_skill">Gestionar los tipos de habilidades</string>
    <string name="text_about">Sobre la app</string>
    <string name="label_text_username">Usuario</string>
    <string name="label_text_pass">Contraseña</string>
    <string name="label_text_name">Nombre</string>
    <string name="label_text_title">Título</string>
    <string name="label_text_description">Descripción</string>
    <string name="label_text_duration">Duración</string>
    <string name="label_text_state">Estado</string>
    <string name="label_text_surname">Apellidos</string>
    <string name="label_text_type">Tipo</string>
    <string name="label_text_selected_employee">Empleado seleccionado</string>
    <string name="label_text_date">Fecha de nacimiento</string>
    <string name="label_text_email">Email</string>
    <string name="label_text_phone">Teléfono</string>
    <string name="label_text_repeat_pass">Repetir contraseña</string>
    <string name="label_text_skill">Perfil</string>
    <string name="text_header_login_dialog">Bienvenido</string>
    <string name="text_header_detail_employee">Datos del empleado</string>
    <string name="text_header_detail_task">Datos de la tarea</string>
    <string name="text_wrong_login_dialog">Usuario o password incorrectos</string>
    <string name="text_button_cancel">Cancelar</string>
    <string name="text_button_done">Aceptar</string>
    <string name="text_state_free">Libre</string>
    <string name="text_state_busy">Ocupado en la tarea %s</string>
    <string name="text_filter">Filtar por: </string>

    <string-array name="filter_by">
        <item>Todas</item>
        <item>Pendientes</item>
        <item>Terminadas</item>
    </string-array>

    <string-array name="task_state">
        <item>Pendiente</item>
        <item>Terminada</item>
    </string-array>

    <string-array name="duration">
        <item>0.15 h</item>
        <item>0.30 h</item>
        <item>0.4 h</item>
        <item>1.0 h</item>
        <item>1.5 h</item>
        <item>2.0 h</item>
        <item>2.5 h</item>
        <item>3.0 h</item>
        <item>3.5 h</item>
    </string-array>
</resources>
