<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:ignore="MissingDefaultResource">


    <TextView
        android:id="@+id/header"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="22sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_header_login_dialog" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_text_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:helperTextEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:startIconDrawable="@drawable/ic_person_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_text_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:helperTextEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:startIconDrawable="@drawable/ic_lock_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_pass"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_button_login_dialog" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDone"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorRed"
        android:text="@string/text_wrong_login_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>
