<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragments.SettingFragment">

        <TextView
            android:id="@+id/text_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:text="@string/text_title_page_setting"
            android:textColor="@color/colorBlack"/>

        <LinearLayout
            android:id="@+id/ll_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/text_head"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cloud_black_24dp">
            </ImageView>

            <TextView
                android:id="@+id/tv_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:text="@string/text_download" />
        </LinearLayout>

        <View
            android:id="@+id/separator_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@id/ll_download"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/ll_managment_type_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/separator_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_black_24dp">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:text="@string/text_type_employee" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_managment_type_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_managment_type_employee"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_description_black_24dp">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:text="@string/text_type_task" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_managment_type_skill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_managment_type_task"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_accessibility_black_24dp">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:text="@string/text_type_skill" />
        </LinearLayout>

        <View
            android:id="@+id/separator_view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@id/ll_managment_type_skill"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/ll_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/separator_view2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_help_black_24dp">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:text="@string/text_about" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

