<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="task"
            type="com.sdos.commerce.entities.Task" />
    </data>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".ui.fragments.DetailEmployeeFragment">

            <TextView
                android:id="@+id/text_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:text="@string/text_header_detail_task"
                android:textColor="@color/colorBlack"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_text_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:helperTextEnabled="true"
                app:errorEnabled="true"
                app:errorTextColor="@color/colorRed"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:startIconDrawable="@drawable/ic_title_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={task.name}"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_text_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:counterEnabled="true"
                app:counterMaxLength="45"
                app:helperTextEnabled="true"
                app:errorEnabled="true"
                app:errorTextColor="@color/colorRed"
                app:startIconDrawable="@drawable/ic_description_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={task.description}"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/fm_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_description"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_text_duration"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spn_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorDarkGrey"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fm_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fm_duration"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_text_state"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spn_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorDarkGrey"
                    />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fm_state"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="24dp"
                android:text="@string/text_button_done" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>